--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -13,7 +13,7 @@
   "singleQuote": false,
   "tabWidth": 2,
   "trailingComma": "all",
-  "useTabs": true,
+  "useTabs": false,
   "vueIndentScriptAndStyle": false,
   "singleAttributePerLine": false
 }
