Huge changes for homework 8 Changes to be committed: 	modified:   .vscode/settings.json 	modified:   SASS/base/_common.scss 	modified:   SASS/components/_backdrop-modal.scss 	modified:   SASS/components/_modal-form.scss 	new file:   SASS/components/_social-links.scss 	modified:   SASS/layouts/_features-section.scss 	modified:   SASS/layouts/_footer.scss 	modified:   SASS/layouts/_header.scss 	modified:   SASS/layouts/_hero-section.scss 	modified:   SASS/layouts/_our-clients-section.scss 	modified:   SASS/layouts/_our-team-section.scss 	modified:   SASS/layouts/_portfolio-filters.scss 	modified:   SASS/layouts/_portfolio-projects.scss 	modified:   SASS/layouts/_service-section.scss 	modified:   SASS/main.scss 	modified:   SASS/utils/_mixins.scss 	modified:   css/main.css 	modified:   css/main.css.map 	modified:   css/main.min.css 	modified:   css/main.min.css.map 	deleted:    css/portfolio.css.map 	deleted:    css/portfolio.min.css.map 	new file:   css_copy/main.css 	new file:   css_copy/main.css.map 	new file:   css_copy/main.min.css 	new file:   css_copy/main.min.css.map 	renamed:    css/modern-normalize.min.css -> css_copy/modern-normalize.min.css 	renamed:    css/portfolio.css -> css_copy/portfolio.css 	new file:   css_copy/portfolio.css.map 	renamed:    css/portfolio.min.css -> css_copy/portfolio.min.css 	new file:   css_copy/portfolio.min.css.map 	renamed:    css/styles copy.css -> css_copy/styles copy.css 	modified:   img/icomoon.zip 	modified:   img/sprite.svg 	modified:   index.html 	modified:   portfolio.html 	new file:   sass_copy/base/_annimations.scss 	new file:   sass_copy/base/_common.scss 	new file:   sass_copy/base/_reset.scss 	new file:   sass_copy/components/_backdrop-modal.scss 	new file:   sass_copy/components/_btn.scss 	new file:   sass_copy/components/_logo.scss 	new file:   sass_copy/components/_modal-form.scss 	new file:   sass_copy/components/_scroll-to-top.scss 	new file:   sass_copy/layouts/_features-section.scss 	new file:   sass_copy/lay

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,11 @@
   ],
   "liveSassCompile.settings.excludeList": ["/**/node_modules/**", "/.vscode/**"],
   "liveSassCompile.settings.generateMap": true,
-  "liveSassCompile.settings.autoprefix": null
+  "liveSassCompile.settings.autoprefix": null,
   // "liveSassCompile.settings.autoprefix": ["> 1%", "last 2 versions"]
+
+  "cssVarriablesAutocomplete.files": ["../sass/utils/_variables.scss"],
+  "cssVarriablesAutocomplete.languageModes": ["css", "scss", "postcss"],
+
+  "scss.showErrors": true
 }
